Replaced 1.5 specific call with 1.4 compatible call.
(from subversion r5098)